--- a/src/app/templates/menu/about-dialog.component.html
+++ b/src/app/templates/menu/about-dialog.component.html
@@ -1,16 +1,19 @@
 <table style="justify-items: center; justify-content: center; display: flex; align-content: center; align-items: center; text-align: center">
 	<tbody>
 		<tr>
+			<td colspan="2"><img src="assets/images/logo_alt.png" height="80px" width="300px" /></td>
+		</tr>
+		<tr>
 			<td class="tag">Author</td>
 			<td class="info">MTOCHIEV</td>
 		</tr>
 		<tr>
 			<td class="tag">Software Version</td>
-			<td class="info">0.3.0</td>
+			<td class="info">0.4.0</td>
 		</tr>
 		<tr>
 			<td class="tag">Date Last Changed</td>
-			<td class="info">2023/10/26</td>
+			<td class="info">2023/10/27</td>
 		</tr>
 	</tbody>
 </table>
